cmake_minimum_required(VERSION 3.23)
project(HW3_202)

set(CMAKE_CXX_STANDARD 17)

add_executable(HW3_202 substrings.cpp
        minimalset.cpp
        minimalset.cpp
        documents.cpp
        documents.cpp
        HashTable.cpp
        HashTable.h
        HashTable.h
        lexicographic.cpp
        insertionorders.cpp)
